Try only (but always) using value from the roll.

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 import roll from "./src/nicedice.js";
 window.f = roll;
 </script>
-<div id="output"></div><textarea id="wordbox" oninput="output.innerHTML=f(wordbox.value)">
+<div id="output"></div><textarea id="wordbox" oninput="output.innerHTML=f(wordbox.value).value">
