--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <script type="module">
-import roll from "./nicedice.js";
+import {roll} from "./nicedice.js";
 window.f = roll;
 </script>
 <div id="output"></div><textarea id="wordbox" oninput="output.innerHTML=f(wordbox.value).value">
