--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <meta charset="utf-8">
+<script>module = {};//dummy object</script>
 <script src="./nicedice.js"></script>
 <div id="output"></div><textarea id="wordbox" oninput="output.innerHTML=roll(wordbox.value).value">
